--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -114,10 +114,10 @@
         {% endwith %}
         <div class="global-data">
             Global:<br/>
-            <span class="global-legend">Total Confirmed: <span class="global-value">{{ global_data['TotalConfirmed'] }}</span></span>
-            <span class="global-legend">Total Active: <span class="global-value">{{ global_data['TotalConfirmed']-global_data['TotalRecovered']-global_data['TotalDeaths'] }}</span></span>
-            <span class="global-legend">Total Recovered: <span class="global-value">{{ global_data['TotalRecovered'] }}</span></span>
-            <span class="global-legend">Total Deaths: <span class="global-value">{{ global_data['TotalDeaths'] }}</span></span>
+            <span class="global-legend">Total Confirmed: <span class="global-value">{{ global_data['active'] }}</span></span>
+            <span class="global-legend">Total Active: <span class="global-value">{{ global_data['active']}}</span></span>
+            <span class="global-legend">Total Recovered: <span class="global-value">{{ global_data['recovered'] }}</span></span>
+            <span class="global-legend">Total Deaths: <span class="global-value">{{ global_data['deaths'] }}</span></span>
         </div>
         <div class="text-details" align="center">
             <div class="details">
