--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -102,7 +102,7 @@
                 </form>
             </div>
         </div>
-        <h3 class="credits" style="color: white;" align="center">Created By: MD Gaziur Rahman Noor | API: https://api.covid19api.com/</h3>
+        <h3 class="credits" style="color: white;" align="center">Created By: MD Gaziur Rahman Noor | API: https://coronavirus-19-api.herokuapp.com/</h3>
     </header>
     <div class="container">
         {% with messages = get_flashed_messages() %}
