Fix some problems

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -114,7 +114,7 @@
         {% endwith %}
         <div class="global-data">
             Global:<br/>
-            <span class="global-legend">Total Confirmed: <span class="global-value">{{ global_data['active'] }}</span></span>
+            <span class="global-legend">Total Confirmed: <span class="global-value">{{ global_data['cases'] }}</span></span>
             <span class="global-legend">Total Active: <span class="global-value">{{ global_data['active']}}</span></span>
             <span class="global-legend">Total Recovered: <span class="global-value">{{ global_data['recovered'] }}</span></span>
             <span class="global-legend">Total Deaths: <span class="global-value">{{ global_data['deaths'] }}</span></span>
